--- a/自动鱼缸.build_log.htm
+++ b/自动鱼缸.build_log.htm
@@ -3,9 +3,9 @@
 <pre>
 <h1>礦ision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: μVision V5.28.0.0
-Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: A Stupid, A, LIC=PEGDY-IN1IZ-LX7U3-A6JIB-BAKNY-K6DVS
+IDE-Version: μVision V5.26.2.0
+Copyright (C) 2018 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: S Stupid, S, LIC=58ENN-Y6ILX-YF8I4-FB8C8-KZDPE-X3WHF
  
 Tool Versions:
 Toolchain:       PK51 Prof. Developers Kit  Version: 9.54
@@ -18,20 +18,22 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.100.0.0
 Dialog DLL:      DP51.DLL V2.62.0.1 
 <h2>Project:</h2>
-D:\Desktop\FF\18567 自动鱼缸系统设计\1、Software\自动鱼缸\自动鱼缸.uvproj
-Project File Date:  12/19/2019
+E:\FF\18567 自动鱼缸系统设计\1、Software\自动鱼缸\自动鱼缸.uvproj
+Project File Date:  12/29/2019
 
 <h2>Output:</h2>
 Build target 'Target 1'
 compiling main.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?DS1302_INIT?DS1302
+    SEGMENT: ?PR?READDATALCM?LCD1602
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_DISPLAYLISTCHAR?MAIN
-Program Size: data=77.1 xdata=0 code=3227
+    SEGMENT: ?PR?_DISPLAYLISTCHAR?LCD1602
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?CO?LCD1602
+Program Size: data=90.1 xdata=0 code=3463
 creating hex file from "自动鱼缸"...
-"自动鱼缸" - 0 Error(s), 2 Warning(s).
+"自动鱼缸" - 0 Error(s), 3 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
